update figures, shorten abstract

--- a/pota.tex
+++ b/pota.tex
@@ -70,42 +70,35 @@ $^{14}$ UK Astronomy Technology Centre, Royal Observatory Edinburgh, Blackford H
 \begin{abstract}
 We present the results of a wide spectroscopic survey aimed at detecting 
 extragalactic globular clusters (GCs) in the core of the Fornax cluster. 
-%This program is part of the Fornax Cluster VLT Spectroscopic Survey (FVSS) whose goal 
-%is to gather kinematical information of stars and compact sources in the Fornax 
-%Core using different VLT instruments, in synergy with the Fornax Deep Survey 
-%carried out at the VLT Survey Telescope (VST). 
-%GC candidates were selected in multi-band VST and VISTA images. 
 About 4500 low resolution spectra (from 4800 
 to 10000 \AA) were observed in 25 VLT/VIMOS masks covering the central 1 deg$^2$ 
 around the dominant galaxy NGC~1399 corresponding to $\sim$175 kpc galactocentric radius. 
-We describe 
-the methodology used for data reduction and data analysis. We found a total of 
+We describe the methodology used for data reduction and data analysis. We found a total of 
 387 unique physical objects (372 GCs and 15 ultra compact dwarfs) in the field 
 covered by our observations. Most of these objects are associated with NGC 1399, with only 
-10\% likely belonging to other giant galaxies. However the kinematics of the objects 
-beyond 10 arcmin (i.e. $\sim$60 kpc) is consistent with the one of an unbound population and likely dominated 
-by intracluster globular clusters. The new VIMOS dataset is complementary to the many 
+10\% likely belonging to other giant galaxies. 
+%However the kinematics of the objects 
+%beyond 10 arcmin (i.e. $\sim$60 kpc) is consistent with the one of an unbound population and likely dominated 
+%by intracluster globular clusters. 
+The new VIMOS dataset is complementary to the many 
 GC catalogues already present in the literature and it brings the total number 
-of tracer particles around  NGC~1399 to more than 1130 objects. This is a 
-valuable reference for the study of the galaxy cluster environment and for the 
-dynamics and kinematics of giant galaxies out to the intracluster regions 
-corresponding to about $1/4$ of the cluster virial radius, which will be mapped 
-with unprecedented details.
+of tracer particles around  NGC~1399 to more than 1130 objects. 
+%This is a valuable reference for the study of the galaxy cluster environment and for the 
+%dynamics and kinematics of giant galaxies out to the intracluster regions 
+%corresponding to about $1/4$ of the cluster virial radius, which will be mapped 
+%with unprecedented details.
 With this comprehensive radial velocity sample we have found that the velocity 
-dipersion of the GC population (equally for red and blue GC populations) shows 
+dispersion of the GC population (equally for red and blue GC populations) shows 
 a relatively sharp increase from low velocity dispersion ($\sim 250-350 \kms$) 
 to high velocity dispersion ($\sim 300-400 \kms$) at projected radius of $\approx10$ arcmin 
 ($\sim 60$ kpc) from the galaxy centre. 
-While the inner values are consistent with the radial velocity dispersion profile 
-of NGC 1399 (the central cluster galaxy) and the outer GC velocity dispersion values 
-are consistent with the velocity dispersion of the Fornax cluster galaxy population. 
-This demonstrates that at $r_{\rm proj}\approx60$\,kpc both blue and red GC populations 
-begin to be governed by the dominating Fornax cluster potential, rather than the central 
-NGC~1399 galaxy potential. This kinematic evidence corroborates the result found in 
-the break of the galaxy surface brightness profile which transitions at a similar radius 
-from a steeper profile of the bright central galaxy and the shallower profile of the outer 
-exponential halo. These lines of evidence show, from the dynamical point of view, 
-the emergence of an intracluster population of GCs in the Fornax galaxy cluster.
+%While the inner values are consistent with the radial velocity dispersion profile 
+%of NGC 1399 (the central cluster galaxy) and the outer GC velocity dispersion values 
+%are consistent with the velocity dispersion of the Fornax cluster galaxy population. 
+This suggests that at a projected radius of $\approx60$~kpc both blue and red GC populations 
+begin to be governed by the dominating Fornax cluster potential, rather than by the central 
+NGC~1399 galaxy potential. This kinematic evidence corroborates similar results found using 
+surface brightness analysis and planetary nebulae kinematics.
 \end{abstract}
 
 \begin{keywords}
@@ -119,14 +112,12 @@ low and high mass galaxies as well as dense stellar systems (globular
 clusters, compact dwarf galaxies, planetary nebulae, etc.) in dense environments. 
 The Virgo and Fornax clusters are the closest galaxy clusters, hence providing 
 privileged targets where detailed observations of the galaxy and small stellar 
-system content can be performed, and galaxy formation theories can be tested. 
+system content can be performed, and galaxy formation theories can be tested \citep[e.g.,][]{Strader11}. 
 
 The Fornax cluster is the most massive galaxy overdensity after the Virgo cluster 
 within 20 Mpc and it is an ideal target to study the effect of the environment 
 on the structure and assembly of galaxies of any type, from the massive central 
-giant early-type systems to the dwarf galaxies (e.g. \citealt{Ferguson89},  
-\citealt{munoz15}, \citealt{Iodice16}, \citealt{venhola17}, 
-\citealt{Eigenthaler18}). Despite its regular appearance, 
+giant early-type systems to the dwarf galaxies \citep[e.g.,][]{Ferguson89, munoz15, Iodice16, venhola17, Eigenthaler18}. Despite its regular appearance, 
 it has been found that the assembly of Fornax is still ongoing. 
 Although its core seems in an evolved phase \citep{Grillmair94,Jordan07} 
 and most of the bright ($m_B < $  15 mag) cluster members are 
@@ -232,8 +223,8 @@ to the virial radius. The area includes the Fornax-A subgroup, hence providing
 a full coverage of the cluster structure under assembly.  The depth of the 
 imaging dataset reaches $\sim 30$ mag/arcsec$^2$ in the $g$-band \citep{Iodice16, Iodice17}, 
 among the deepest acquired on the cluster so far \citep{venhola17}. 
-VISTA/VIRCAM observations in $J$ and $K$ (with limiting magnitudes $K_s  = 23.4 $ mag $AB$ 
-mag, and $J = 23.4$ mag $AB$ mag, respectively) are also available (see e.g. \citealt{munoz15}), to 
+VISTA/VIRCAM observations in $J$ and $K$ (with limiting magnitudes $K_s  = 23.4 $ $AB$ 
+mag, and $J = 23.4$ $AB$ mag, respectively) are also available (see e.g. \citealt{munoz15}), to 
 complement the optical data and optimise galaxy and globular cluster membership 
 and the selection of follow-up targets (e.g. globular clusters, GCs hereafter, 
 and/or ultra compact dwarf galaxies, UCDs hereafter). 
@@ -251,14 +242,14 @@ cluster \citep{DAbrusco16,cantiello17}.
 \label{sec:NGFS}
 The Next Generation Fornax Survey (NGFS; \citealt{munoz15}, Puzia et al. 2018, in prep.) 
 is an optical and near-infrared imaging survey of the Fornax
-galaxy cluster virial sphere ($R_{\rm vir}\sim 1.4$ Mpc; \citealt{Drinkwater+01}). 
+galaxy cluster virial sphere ($R_{\rm vir}\sim 1.4$~Mpc; \citealt{Drinkwater+01}). 
 NGFS uses the Dark Energy Camera (DECam; Flaugher et al. 2015) mounted on the 
 4-meter Blanco telescope at Cerro Tololo Interamerican Observatory (CTIO) in the 
 optical wavelengths and the European Southern Observatory (ESO) 3.7-meter VISTA 
 telescope with VIRCam \citep{sutherland15} for near-infrared observations. 
 The current NGFS survey footprint covers $\sim50$ deg$^2$ with 19 DECam tiles of 2.65 
-deg$^2$ each, and detects point-sources at $S/N\ =$ 5 down to $u'= 26.5$ , $g'= 26.1$ , 
-$i'= 25.3$ , $J = 24.0$ and $K_s = 23.4$ AB mag. Here we make use of preliminary NGFS 
+deg$^2$ each, and detects point-sources at $S/N\ =$ 5 down to $u'= 26.5$ mag , $g'= 26.1$ mag, 
+$i'= 25.3$ mag , $J = 24.0$ mag and $K_s = 23.4$ mag. Here we make use of preliminary NGFS 
 $K_s$-band point source catalogs.
 
 The panchromatic NGFS data were recently used to detect low surface-brightness 
@@ -266,7 +257,7 @@ galaxies \citep{munoz15}, measure the morphological, scaling, and clustering
 properties of more than 600 dwarf galaxies (\citealt{Eigenthaler18}, îrdenes-Brice–o 
 et al. 2018a, submitted), study their nucleation and stellar population properties 
 (îrdenes-Brice–o et al. 2018b, submitted, Eigenthaler et al. 2018b, submitted), 
-and analyze the globular cluster systems in Fornax (îrdenes-Brice–o et al. 2018c, submitted). 
+and analyze the globular cluster systems in Fornax ({\^I}rdenes-Brice–o et al. 2018c, submitted). 
 
 \subsection{Selection of globular cluster candidates}
 \label{sec:selectionGC}
@@ -662,8 +653,7 @@ the wavelength calibration for this particular object. The root-mean-square of
 the velocity difference of GCs and stars combined is $91 \kms$, which becomes 
 $79\kms$ after clipping the outlier. The former is our statistical error.
 
-We averaged the radial velocities of the duplicated GCs and summed in 
-quadrature their velocity uncertainties. This left us with a catalogue of 387 
+We weight-averaged the radial velocities of the duplicated GCs. This left us with a catalogue of 387 
 Fornax objects and 464 Galactic stars.
 
 \begin{figure}
@@ -697,7 +687,7 @@ author. Table \ref{tab:authors} reports the number of objects per author for
 which we have a VIMOS radial velocity. 
 In order to compare literature velocities with our VIMOS velocities, we 
 averaged together the radial velocities of unique objects observed in multiple 
-literature studies. Uncertainties were summed in quadrature. 
+literature studies. 
 Overall, we found 48 of our Fornax objects to have a literature counterpart. 
 
 Figure \ref{fig:vel_comparison} shows the comparison between our VIMOS 
@@ -801,7 +791,6 @@ at $v = 1425$ km s$^{-1}$. The systemic velocity and galactocentric distance of
 giant Fornax galaxies (namely NGC~1404, NGC~1387, NGC~1380) are marked with 
 the correspondent galaxy name.  The distance is expressed in 
 arcminutes from the centre of NGC~1399. 
-%TP: Schubert et al. give also a foreground star sample of radial velocities. You should overplot this here too. NRN: non credo che sia necessario, incasina il plot
 Physical distances in kpc are also shown on the top panel. 
 \textit{Right}: Position diagram, with North to the top and East to the left. 
 The plot shows the spatial distribution of the objects from the left panel 
@@ -816,7 +805,6 @@ The phase-space diagram and the spatial distribution are shown in Figure
 \ref{fig:phase-space}. In both cases, GCs, UCDs and Galactic stars are compared 
 to the catalogues of \citet{Bergond07} and \citet{Schuberth}. These two 
 catalogues are the largest and most homogeneous in the literature. 
-%TP: Say how many GCs each catalog contains and in what luminosity range.
 Moreover, 
 the catalogue of Schuberth is an extension of the catalogue of 
 \citet{Dirsch04}. Together they include sources within 18 arcmin from NGC~1399. 
@@ -830,9 +818,7 @@ the core of the Fornax cluster.
 The left panel in Figure \ref{fig:phase-space} shows that the velocity 
 distribution of GCs/UCDs is well separated from that of Galactic stars, 
 although a few GCs between $10<R<20$ arcmin 
-%TP: Give this range also in physical units, i.e. kpc.
-might be misclassified as Galactic 
-stars. 
+might be misclassified as Galactic stars. 
 
 The systemic velocity of GCs and UCDs is $v_{\rm GCs} = 1443 \pm 18 \kms$ and 
 $v_{\rm UCDs} = 1413 \pm 91 \kms$, respectively. These are both consistent with 
@@ -854,10 +840,9 @@ $\sigma$ is the galaxy stellar velocity dispersion. Here we used $\sigma = 247
 \kms$  \citep{Vanderbeke11}, $v_{\rm sys} = 1947 \kms$ for NGC~1404 and $\sigma 
 = 170 \kms$ \citep{Wegner03}, $v_{\rm sys} = 1302\kms $ for NGC~1387, 
 respectively. 
-%TP: Perhaps, we should use a homogeneous sample of kinematics information, e.g. from ATLAS3D. NRN: decidi, per me va anche bene cos“.
+
 After applying the above selection criteria, we found 17 and 8 
 GCs associated with NGC~1404 and NGC~1387, respectively. 
-%TP: Those are very small numbers. We should specify that these are confirmed targets only from the VIMOS data. Can we do the same selection with the composite radial velocity sample? How many GCs are we getting from the literature and our dataset altogether? NRN: si forse  facile da fare...ma possiamo farlo dopo la submission...
 The larger number of 
 GCs associated with NGC~1404 is due to the galaxy being more massive than 
 NGC~1387, but also to its proximity to NGC~1399 which increases the fraction of 
@@ -883,13 +868,11 @@ might also contain some GCs belonging to NGC~1379 and NGC~1381 (see Figure
 \includegraphics[width=\columnwidth]{figures/cc.png} 
 \includegraphics[width=\columnwidth]{figures/cm.png} 
 \caption{Colour--colour and colour--magnitude diagram. 
-%TP: Did you de-redden these colors? Either way, you should explicitly mention whether or not a reddening correction was applied.
 The figure shows the 
 distribution of the labelled objects in a $(g-i)$ vs. $(g-r)$ space (left 
 panel) and $(g-i)$ vs $i$ space (right panel). Each diagram includes also a 
 radial velocity $v$ axis to show the separation of GCs/UCDs from stars and 
 galaxies. The objects labelled as `all' represent all 4340 sources observed with VIMOS.
-%TP:Say here where the radial velocities of ÒallÓ the source in the very right panel come from. The last sentence is a little unclear. I marked the yellow section which is somewhat confusing. Perhaps, you could rephrase that part more clearly.
 }
 \label{fig:cc}
 \end{figure*}
@@ -965,10 +948,9 @@ The final catalogue is made of the 387 objects discussed in this paper
 combined with the catalogues of \citet{Bergond07} and \citet{Schuberth}. Our master catalogue
 includes GCs from other giant galaxies in the field. If an 
 object was found in more than one catalogue we computed its weight-average radial 
-velocity with the uncertainties summed in quadrature. Also, GCs and UCDs from 
+velocity. Also, GCs and UCDs from 
 literature catalogues were given the VST photometry discussed in this work. 
-Therefore, no photometric calibration was required, e.g. to obtain Fig. 
-\ref{fig:cc}. 
+Therefore, no photometric calibration was required.
 
 Figure \ref{fig:vrms} displays the $v_{\rm rms}$ profile for: i) our combined master 
 catalogue of 1133 GCs and UCDs, including literature objects; ii) the GC catalogue of 
@@ -1014,9 +996,9 @@ emergence of an intracluster population of GCs and PNe.
 At the light of similar conclusions found for PNs by Spiniello et al.(2018, submitted), 
 there is  growing evidence that multiple independent lines of investigation 
 are starting to support, for the first time, the existence of a photometrically 
-and kinematically distinct intracluster component in the Fornax Cluster core
+and kinematically distinct intracluster component in the Fornax Cluster core.
 
-When split in the red and blue subpopulations, using a colour cut at $(g - i) = 0.85$ 
+When split in the red and blue subpopulations, using a colour cut at $(g - i) = 0.85$ mag 
 the GC sample shows some interesting differences. At all radii the $v_{\rm rms}$ 
 profile of the red GCs is systematically smaller than the one of the blue GCs, 
 albeit the two profiles are broadly consistent with each other within one sigma. 
@@ -1028,7 +1010,7 @@ be the more extended population in radius, nicely connecting to the value of
 the cluster galaxy datapoint. The difference in normalisation between the two 
 populations may be driven by the different slopes of the two 
 populations' density profiles as measured, e.g., by 
-\citep[][their Eq. 10 and 11 and Table 5]{Schuberth}. 
+\citet[][their Eq. 10 and 11 and Table 5]{Schuberth}. 
 %However, the difference 
 %between the measured  slopes is so small that using Eq. 2 to 4 in \citet{Napolitano14} to 
 %determine the expected change in the normalisation of the two profiles, we have 
@@ -1094,7 +1076,7 @@ present for this region of the sky.  Approximately 4500 objects were observed.
 The total observation time was 37.5 hours, mostly in sub-arcsec seeing 
 conditions. Data reduction was performed using the ESO VIMOS pipeline. 
 Redshifts were extracted using {\it iraf/fxcor}, whereas the remaining data analysis 
-was carried out using using customer {\it python} code. Only the Calcium Triplet region
+was carried out using customer {\it python} code. Only the Calcium Triplet region
 (8498 to 8662 \AA) was used for redshift estimation, but the quality of the fit 
 was assessed using the full spectrum from 4800 to 10000 \AA.
 
@@ -1128,23 +1110,23 @@ population of GCs (as well as PNe) in the Fornax galaxy Cluster.
 
 \section*{Acknowledgments}
 
-NRN and EI acknowledge financial support from the European Unionâ€™s Horizon
+NRN and EI acknowledge financial support from the European Union's Horizon
 2020 research and innovation programme under the Marie Sk\l{}odowska-Curie
 grant agreement No 721463 to the SUNDIAL ITN network and  PRIN INAF 2014 
 ``Fornax Cluster Imaging and Spectroscopic Deep Survey''.
 CT is supported through an NWO-VICI grant (project number 639.043.308).
 CSpiniello has received funding from the European Union's Horizon 2020 
-research and innovation programme under the Marie Sklodowska-Curie 
-actions grant agreement n. 664931.
-M.P. acknowledges financial contribution from the agreement ASI-INAF n.2017-14-H.O.
+research and innovation programme under the Marie Sk\l{}odowska-Curie
+actions grant agreement No 664931.
+M.P. acknowledges financial contribution from the agreement ASI-INAF No 2017-14-H.O.
 T.L. acknowledges financial support from the European Union's Horizon 2020 
 research and innovation programme under the Marie Sk\l{}odowska-Curie 
-grant agreement No.\ 721463 to the SUNDIAL ITN network.
+grant agreement No.~721463 to the SUNDIAL ITN network.
 P.E. acknowledges support from the Chinese Academy of Sciences (CAS) 
 through CAS-CONICYT Postdoctoral  Fellowship CAS150023 administered 
 by the CAS South America Center for Astronomy (CASSACA) in Santiago,  Chile.
 MS acknowledge finacial support from the VST project (P.I. P. Schipani).
-The authors acknowledge financial support from the European Unionâ€™s 
+The authors acknowledge financial support from the European Union's 
 Horizon 2020 research and innovation programme under Marie Sk\l{}odowska-Curie 
 grant agreement No 721463 to the SUNDIAL ITN network.
 GvdV acknowledges funding from the European Research Council (ERC) under 
