adapt to new mnras class

--- a/pota.tex
+++ b/pota.tex
@@ -1,4 +1,4 @@
-\documentclass[useAMS,usenatbib]{mn2e}
+\documentclass[usenatbib]{mnras}
 
 \usepackage{times}
 \usepackage{graphicx}
@@ -61,7 +61,7 @@ $^{13}$ INFN, Sezione di Napoli, via Cintia, 80126, Napoli, Italy\\
 $^{14}$ UK Astronomy Technology Centre, Royal Observatory Edinburgh, Blackford Hill, Edinburgh, EH9 3HJ, U
 }
 
-\voffset=-0.6in
+%\voffset=-0.6in
 \begin{document}
 
 \label{firstpage}
@@ -1138,6 +1138,6 @@ the BASAL Center for Astrophysics and Associated Technologies (PFB-06).
 This research made use of Astropy, a community-developed core Python 
 package for Astronomy (Astropy Collaboration, 2018)
 
-\bibliographystyle{mn2e}
+\bibliographystyle{mnras}
 \bibliography{ref3}
 \end{document}
