fix pdf rendering

--- a/pota.tex
+++ b/pota.tex
@@ -8,6 +8,7 @@
 \usepackage{journal_names}
 \usepackage{paralist}
 \usepackage[inline]{enumitem}
+\pdfminorversion=5
 
 \newcommand{\kms}{\mbox{\,km~s$^{-1}$}}
 \setlength{\tabcolsep}{0.06in}  
