final referee changes

--- a/pota.tex
+++ b/pota.tex
@@ -76,9 +76,9 @@ to 10000 \AA) were observed in 25 VLT/VIMOS masks covering the central 1 deg$^2$
 around the dominant galaxy NGC~1399 corresponding to $\sim$175 kpc galactocentric radius.
 We describe the methodology used for data reduction and data analysis. We found a total of
 387 unique physical objects (372 GCs and 15 ultra compact dwarfs) in the field
-covered by our observations. 48 of these objects have a literature counterpart.
+covered by our observations. 
 Most of these objects lie in the region of NGC1399 halo, with only
-10\% likely belonging to other giant galaxies.
+10\% likely belonging to other giant galaxies. \textbf{48 of these objects have a literature counterpart.}
 %However the kinematics of the objects
 %beyond 10 arcmin (i.e. $\sim$60 kpc) is consistent with the one of an unbound population and likely dominated
 %by intracluster globular clusters.
@@ -256,10 +256,7 @@ $K_s$-band point source catalogs.
 
 The panchromatic NGFS data were recently used to detect low surface-brightness
 galaxies \citep{munoz15}, measure the morphological, scaling, and clustering
-properties of more than 600 dwarf galaxies (\citealt{Eigenthaler18}, îrdenes-Brice–o
-et al. 2018a, submitted), study their nucleation and stellar population properties
-(îrdenes-Brice–o et al. 2018b, submitted, Eigenthaler et al. 2018b, submitted),
-and analyze the globular cluster systems in Fornax ({\^I}rdenes-Brice–o et al. 2018c, submitted).
+properties of more than 600 dwarf galaxies, study their nucleation and stellar population properties and analyze the globular cluster systems in Fornax \citep{Eigenthaler18, Ordenes-Briceno18}.
 
 \subsection{Selection of globular cluster candidates}
 \label{sec:selectionGC}
@@ -963,14 +960,14 @@ size in order to keep the number of objects in each bin constant.
 We chose 10, 9 and 13 bins, which resulted in roughly 48, 66, 88 objects per
 bin for the blue, red and all GCs (including UCDs), respectively. 
 
-These values were the best trade-off between the number of object per bin 
-which would keep the statistical errors below 15\% (see Napolitano et al. 2001) 
-and number of bins in order to have a smooth $v_{\rm rms}$ profile easy to interpret. 
-The use of a larger number of bins (less particle per bin) would have made 
-the profile noisier because the larger errors, while the use of less bins would have 
-washed some large scale features of the size of even few arcmins. 
+\textbf{These values were the best trade-off between the number of objects per bin 
+which would keep the statistical errors below 15\% \citep{Napolitano01} 
+and number of bins in order to have a smooth $v_{\rm rms}$. 
+The use of a larger number of bins (less objects per bin) would have made 
+the profile noisier, while the use of fewer number of bins (more objects per bin) would have 
+washed some large scale features of the size of even a few arcmins. 
 We checked that our final choice produced a stable profile if slightly changing 
-the numbers of particle per bin around the number above.
+the numbers of objects per bin around the number above.}
 
 The master catalogue contains GCs and UCDs predominantly from NGC~1399, which
 is the largest and most massive system in the field dominating the total
@@ -982,37 +979,36 @@ profile of the total sample (shaded gray area) there is a rise in the
 profile around $R\sim10$ arcmin ($\sim 50$ Kpc) which marks a kinematical transition from a
 ``colder'' kinematical region to a ``warmer'' one.
 
-We have checked the significance of this feature by performing a suite of
-Montecarlo simulations following the prescriptions in \citet{Napolitano2000}.
+\textbf{We have checked the significance of this feature by performing a suite of
+Montecarlo simulations following the prescriptions in \citet{Napolitano01}.
 We have assumed a potential made by a stellar spheroid plus a dark matter halo
 whose total mass profile is linearly growing with radius and producing a projected
 dispersion profile which flattens to $\sim 300$ \kms outside 5 arcmin. 
 Note that this model is not meant to reproduce
 the actual dynamics of the cluster system but providing a reasonable equilibrium
 model interpolating the inner and outer regions. Assuming isotropic orbits,
-we have produces 1000 re-simulations of 1120 particles which we have divided in
-to make 14 bins of 80 particle each.
+we have produced 1000 simulations of 1120 particles which we have been divided in 
+14 bins of 80 particle each.}
 
 \begin{figure}
 \centering
 \includegraphics[width=\columnwidth]{figures/sims.png}
-\caption{Simulated $v_{\rm rms}$ profile compared to real data. The grey line 
+\caption{Simulated $v_{\rm rms}$ profile compared to real data  (black points). The grey line 
 represents the average ( $\pm 1 \sigma$) of 1000 simulations obtained as explained in the text. 
-The red line show one of the two MonteCarlo resembling the observed $v_{\rm rms}$ profile
-for all GCs (black points).}
+The red line shows one of the two MonteCarlo simulations resembling the observed $v_{\rm rms}$ profile
+for all GCs.}
 \label{fig:sims}
 \end{figure}
 
-The average recovered dispersion profile over the 1000 simulations is shown in
+\textbf{The average recovered dispersion profile over the 1000 simulations is shown in
 Figure \ref{fig:sims}. We have then checked how many of the simulated
 profiles showed the three last data bins exceeding by 1$\sigma$ the dispersion
-values of the bins in the interval $5-7$ arcmin and we have found only one profile
+values of the bins in the interval $5-7$ arcmin. We have found only one profile
 showing this feature, while there were two profiles for which only two over the
 last three bins were exceeding the dispersion values of the same inner bins.
 In Figure \ref{fig:sims} we show one of the two profiles which closer reassembles the
-distribution of the bins in our measured profile.
-This shows that the measured steep rise in the profile around $R=10$ arcmin is
-significant at more than 3$\sigma$.
+distribution of the bins in our measured profile. We conclude that the probability of 
+observing by pure chance a rise in the profile as steep as the one obtained from the data is only 0.2\%.}
 
 The rise at intermediate radii can also be observed in the PNe datapoints
 (magenta triangles) in Figure \ref{fig:vrms}. As discussed in FVSS-II, the peak in $v_{\rm rms}$
