--- a/ref3.bib
+++ b/ref3.bib
@@ -13,6 +13,28 @@
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Ordenes-Briceno18,
+   author = {{Ordenes-Brice{\~n}o}, Y. and {Eigenthaler}, P. and {Taylor}, M.~A. and 
+	{Puzia}, T.~H. and {Alamo-Mart{\'{\i}}nez}, K. and {Ribbeck}, K.~X. and 
+	{Mu{\~n}oz}, R.~P. and {Zhang}, H. and {Grebel}, E.~K. and {{\'A}ngel}, S. and 
+	{C{\^o}t{\'e}}, P. and {Ferrarese}, L. and {Hilker}, M. and 
+	{Lan{\c c}on}, A. and {Mieske}, S. and {Miller}, B.~W. and {Rong}, Y. and 
+	{S{\'a}nchez-Janssen}, R.},
+    title = "{The Next Generation Fornax Survey (NGFS). III. Revealing the Spatial Substructure of the Dwarf Galaxy Population Inside Half of Fornax's Virial Radius}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1803.10784},
+ keywords = {galaxies: clusters: individual: Fornax, galaxies: dwarf, galaxies: elliptical and lenticular, cD },
+     year = 2018,
+    month = may,
+   volume = 859,
+      eid = {52},
+    pages = {52},
+      doi = {10.3847/1538-4357/aaba70},
+   adsurl = {http://adsabs.harvard.edu/abs/2018ApJ...859...52O},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{Napolitano2000,
    author = {{Napolitano}, N.~R. and {Arnaboldi}, M. and {Capaccioli}, M.
 	},
